# torrent-name-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
tests/: test_app.py  test_torrent_name_analyzer.py  test_utils.py
tests/name_parser/: test_parse.py
tests/name_parser/files/: output.json
torrent_name_analyzer/: __init__.py  app.py  config.py  orm.py  utils.py  wsgi.py
torrent_name_analyzer/name_parser/: README.md  __init__.py  exceptions.py  parse.py  patterns.py
torrent_name_analyzer/swagger/: swagger.yaml
torrent_name_analyzer/templates/: home.html
