[tool.poetry]
name = "torrent-name-analyzer"
version = "2020.05.19"
description = "REST api to extract all possible media information from a torrent filename."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/opacam/torrent-name-analyzer/"
repository = "https://github.com/opacam/torrent-name-analyzer/"
keywords = ["flask", "REST API", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities"
]
authors = ["opacam <canellestudi@gmail.com>"]
maintainers = ["opacam <canellestudi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
sqlalchemy = "^1.3.16"
gunicorn = {extras = ["gevent"], version = "^20.0.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
